# qt-ta

./: .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml  run_packaging.py  setup.py
qt_ta/: __init__.py
qt_ta/factory/: __init__.py  signal.py
qt_ta/ptr/: __init__.py  get_chart.py  get_data.py  get_similarity.py  image_io.py  utils_bql.py  utils_intraday.py
qt_ta/ta/: __init__.py  pandas_ta_patch.py
tests/: __init__.py  conftest.py  test_ta.py
